ghc-4335c07/testsuite/tests/indexed-types/should_compile/T8002b.hs
{-# LANGUAGE TypeFamilies #-}
module T8002b where

type family Rep a
type instance Rep Int = Int
