ghc-4335c07/testsuite/tests/indexed-types/should_fail/T2677.hs
{-# LANGUAGE TypeFamilies #-}

module T2677 where

type family A x
type instance A a = Bool
type instance A Int = Char
